# another-demo-package

./: .gitignore  README.md  pyproject.toml
another_package/: __init__.py  another_package_module.py  class_module.py  say_hello_module.py
